[andy] add activiy show page

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -48,6 +48,7 @@
       </div>
     </div>
     <%= render partial: "ban_reason" %>
+    <%= render "user_topic" %>
     <% if @replies.blank? %>
       <div class="no-result">
         <%= t("topics.no_replies") %>
