--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -471,3 +471,25 @@ h2 {
 .remove-icon-right {
   border-radius: 0 0.25rem 0.25rem 0;
 }
+
+.avatar-frame {
+  width: 40px;
+  height: 40px;
+  margin-right: 11px;
+  .corner-icon-tag {
+    height: 15px;
+    width: 15px;
+    border-radius: 7.5px;
+    border: 0.5px solid #D1D5DB;
+    background-color: white;
+    position: relative;
+    bottom: 15px;
+    left: 25px;
+  }
+  .corner-icon-tag svg {
+    position: relative;
+    bottom: 5px;
+    left: 3.6px;
+  }
+}
+
