--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -122,7 +122,6 @@ h2 {
 }
 
 .edit-group-user-modal {
-  top: -50px;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -475,7 +474,9 @@ h2 {
 .avatar-frame {
   width: 40px;
   height: 40px;
-  margin-right: 11px;
+  margin-right: 6px;
+  margin-left: 5px;
+  margin-bottom: 30px;
   .corner-icon-tag {
     height: 15px;
     width: 15px;
