[andy] add activiy show page

--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -476,7 +476,8 @@ h2 {
   height: 40px;
   margin-right: 6px;
   margin-left: 5px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+  margin-top: 15px;
   .corner-icon-tag {
     height: 15px;
     width: 15px;
