--- a/app/views/topics/_user_topic.html.slim
+++ b/app/views/topics/_user_topic.html.slim
@@ -3,6 +3,29 @@
     = render 'pendding_list'
 .topic-detail.card
   - if @none_penddings.present?
-    .d-flex.flex-wrap.card-body
+    .d-flex.flex-wrap.card-body.none-pendding-user-card-body
       - @none_penddings.each do |ut|
         = render partial: 'marked_user_card', locals: { user_topic: ut }
+    button.show-button type='button'
+      = '+ show'
+    button.hide-button type='button' style="display: none;"
+      = '- hide'
+
+javascript:
+  $('.show-button').click(function(){
+    $('.none-pendding-user-card-body').css('height', '100%')
+    $('.show-button').hide()
+    $('.hide-button').show()
+  })
+
+  $('.hide-button').click(function(){
+    $('.none-pendding-user-card-body').css('height', '100px')
+    $('.hide-button').hide()
+    $('.show-button').show()
+  })
+
+css:
+  .none-pendding-user-card-body {
+    height: 100px;
+    overflow: hidden;
+  }
