--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -495,3 +495,18 @@ h2 {
   }
 }
 
+
+.none-pendding-user-card-body {
+  height: 100px;
+  overflow: hidden;
+}
+
+.show-hide-button {
+  text-decoration: none;
+  border: none;
+  background-color: transparent;
+}
+
+.show-hide-button:hover {
+  text-decoration:underline;
+}
