--- a/app/views/topics/edit_activity.js.erb
+++ b/app/views/topics/edit_activity.js.erb
@@ -1,5 +1,5 @@
 (function () {
-    target = "<%= escape_javascript(render partial: 'edit_activity', locals: { topic: @topic, user_topic: @user_topic, opt: params[:opt] })%>"
+    target = "<%= escape_javascript(render partial: '/topics/edit_activity', locals: { topic: @topic, user_topic: @user_topic })%>"
 	replaceHTML($('#edit-activiy-modal-body'), target);
     $('#edit-activiy-modal').modal('show');
 })();
