--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -314,9 +314,10 @@ h2 {
     padding: 40px;
     .user-list-body {
       padding: 10px;
+      padding-left: 25px;
     }
     .user-list-footer {
-      padding: 10px
+      padding: 10px;
     }
   }
   .groups {
@@ -331,7 +332,8 @@ h2 {
   font-weight: normal;
   height: 60px;
   width: 276px;
-  margin-bottom: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   margin-right: 12px;
   .card-avatar {
     margin-right: 6px;
@@ -499,6 +501,7 @@ h2 {
 .none-pendding-user-card-body {
   height: 100px;
   overflow: hidden;
+  padding-top: 0px;
 }
 
 .show-hide-button {
