--- a/app/views/groups/_show_tabs.html.slim
+++ b/app/views/groups/_show_tabs.html.slim
@@ -1,7 +1,7 @@
 .row
   .col-lg-9.group-tab
     ul#myTab.nav.nav-tabs.group-nav-tab role="tablist"
-      - if current_user.present? && @group.group_admin?(current_user)
+      - if current_user.present? && (@group.group_admin?(current_user) || current_user.admin?)
         li.nav-item
           a#info-one-tab.tab-text.nav-link.active aria-controls="info-one" aria-selected="true" data-toggle="tab" href="#info-one" role="tab"
             = t('groups.infos')
@@ -13,7 +13,7 @@
           a#members-one-tab.tab-text.nav-link.active aria-controls="members-one" aria-selected="false" data-toggle="tab" href="#members-one" role="tab"
             = t('groups.members')
     #myTabContent.tab-content.groups.card
-      - if current_user.present? && @group.group_admin?(current_user)
+      - if current_user.present? && (@group.group_admin?(current_user) || current_user.admin?)
         #info-one.tab-pane.fade.show.active aria-labelledby="info-tab" role="tabpanel"
           .group-form.group-tab-content#group-info-content style="width: 100%;"
             = render partial: 'groups/content_form'
@@ -35,7 +35,26 @@
         li.nav-item
           a#members-two-tab.nav-link.active aria-controls="members-two" aria-selected="false" data-toggle="tab" href="#members-two" role="tab"
     #myTabContent.tab-content
-      - if current_user.present? && @group.group_admin?(current_user)
+      - if current_user.present? && current_user.admin?
+        #info-two.tab-pane.fade.show.active aria-labelledby="info-two-tab" role="tabpanel"
+          .card
+            .card-body
+              = link_to(t('groups.group_path'), topics_group_path(@group), class: 'btn btn-primary btn-block')
+          .card
+            - if @group.pendding?
+              .card-body
+                = link_to(t('groups.approve_group'), approve_group_path(@group), method: :post, class: 'btn btn-primary btn-block')
+              .card-body
+                = link_to(t('groups.reject_group'), reject_group_path(@group), method: :post, class: 'btn btn-primary btn-block')
+            - if @group.approved?
+              .card-body
+                = link_to(t('groups.reject_group'), reject_group_path(@group), method: :post, class: 'btn btn-primary btn-block')
+            - if @group.rejected?
+              .card-body
+                = link_to(t('groups.restore_group'), approve_group_path(@group, opt: 'restore'), method: :post, class: 'btn btn-primary btn-block')
+        #members-two.tab-pane.fade aria-labelledby="members-two-tab" role="tabpanel"
+          = render "groups/sidebar_group_card_small", group: @group
+      - elsif current_user.present? && @group.group_admin?(current_user)
         #info-two.tab-pane.fade.show.active aria-labelledby="info-two-tab" role="tabpanel"
           .card
             .card-body
