[andy] fixed css and revert ruby version

--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -409,7 +409,7 @@ hr {
     padding: 10px;
     margin-right: 39px;
     margin-bottom: 30px;
-    width: 423px;
+    width: 45%;
     .group-title {
       margin-left: 8px;
       font-size: 16px;
