--- a/app/javascript/front/home.scss
+++ b/app/javascript/front/home.scss
@@ -231,13 +231,13 @@ h2 {
     .title {
       font-size: 16px;
       line-height: 22px;
-      max-width: 160px;
+      max-width: 60%;
     }
     .sub-title {
       font-size: 14px;
       line-height: 20px;
       color: #666666;
-      max-width: 160px;
+      max-width: 55%;
     }
   }
   .content-body {
