--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,32 +32,10 @@ end
           </div>
         <% end %>
         <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
-          <% if auth_info.present? %>
-            <%= f.hidden_field :omniauth_provider %>
-            <%= f.hidden_field :omniauth_uid %>
-          <% end %>
-          <%= render "shared/error_messages", target: resource %>
-          <%= form_group(f, :login) do %>
-            <%= f.text_field :login, class: "form-control form-control-lg", placeholder: t("users.login"), hint: t("users.suggest_using_twitter_id") %>
-          <% end %>
-          <%= form_group(f, :name) do %>
-            <%= f.text_field :name, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.name") %>
-          <% end %>
-          <%= form_group(f, :email) do %>
-            <%= f.text_field :email, type: :email, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.email") %>
-          <% end %>
-          <div class="form-group">
-            <div class="custom-control custom-checkbox custom-checkbox-lg">
-              <%= f.check_box :email_public, checked: true, class: "custom-control-input" %>
-              <label for="user_email_public"  class="custom-form-label"><%= t("activerecord.attributes.user.email_public") %></label>
-            </div>
-          </div>
-          <%= form_group(f, :password) do %>
-            <%= f.password_field :password, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.password") %>
-          <% end %>
-          <%= form_group(f, :password_confirmation) do %>
-            <%= f.password_field :password_confirmation, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.password_confirmation") %>
-          <% end %>
+
+          <%= render partial: (params[:wallet_type].blank? ? 'normal_sign_up_form' : 'decentralized_sign_up_form'),
+            locals: { f: f, resource: resource } %>
+
           <%= form_group(f, :base, label: false) do %>
             <div class="input-group input-group-lg">
               <%= render "/shared/captcha_input" %>
@@ -66,9 +44,32 @@ end
           <div class="form-actions">
             <%= f.submit t('users.submit_new_user'), class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
           </div>
+
+
         <% end %>
+        <div>
+          <%= link_to "signup using ETH", "javascript:void();", class: 'eth_connect' %>,
+          <%= link_to "signup using Polka", "javascript:alert(1)" %>
+        </div>
       </div>
     </div>
   </div>
   <div class="col"></div>
 </div>
+
+<script>
+
+const buttonEthConnect = document.querySelector('a.eth_connect');
+
+const formNewUser = document.querySelector('form.new_user');
+if (typeof window.ethereum !== 'undefined') {
+  buttonEthConnect.addEventListener('click', async () => {
+    const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+
+		console.info("=== accounts: ", accounts)
+    location.href="?address=" + accounts[0] + "&wallet_type=" + "eth"
+  });
+}else {
+  alert('You have not installed a wallet(e.g. Metamask) yet, please go to install it')
+}
+</script>
