--- a/app/views/devise/registrations/_decentralized_sign_up_form.html.erb
+++ b/app/views/devise/registrations/_decentralized_sign_up_form.html.erb
@@ -15,5 +15,5 @@
   <%= f.text_field :name, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.name") %>
 <% end %>
 <%= form_group(f, "#{address_name}") do %>
-  <%= f.text_field "#{address_name}", class: "form-control form-control-lg"  %>
+  <%= f.text_field "#{address_name}", class: "form-control form-control-lg", readonly:true %>
 <% end %>
