improved de-centralized register form

--- a/app/views/devise/registrations/_decentralized_sign_up_form.html.erb
+++ b/app/views/devise/registrations/_decentralized_sign_up_form.html.erb
@@ -1,10 +1,8 @@
 <%
   address_name = "#{params[:wallet_type]}_address"
   resource.send "#{address_name}=", params[:address]
-  resource.email = "#{params[:address]}@#{params[:wallet_type]}.com"
   resource.wallet_type = params[:wallet_type]
 %>
-<%= f.hidden_field :email %>
 <%= f.hidden_field :wallet_type %>
 <%= hidden_field_tag :address, params[:address] %>
 <%= render "shared/error_messages", target: @user %>
@@ -14,6 +12,19 @@
 <%= form_group(f, :name) do %>
   <%= f.text_field :name, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.name") %>
 <% end %>
+
+<%= form_group(f, :email) do %>
+  <%= f.text_field :email, type: :email, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.email") %>
+<% end %>
+
+<div class="form-group">
+  <div class="custom-control custom-checkbox custom-checkbox-lg">
+    <%= f.check_box :email_public, checked: true, class: "custom-control-input" %>
+    <label for="user_email_public"  class="custom-form-label"><%= t("activerecord.attributes.user.email_public") %></label>
+  </div>
+</div>
+
 <%= form_group(f, "#{address_name}") do %>
   <%= f.text_field "#{address_name}", class: "form-control form-control-lg", readonly:true %>
 <% end %>
+
