--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -44,16 +44,29 @@ end
               <%= render "/shared/captcha_input" %>
             </div>
           <% end %>
+
           <div class="form-actions">
             <%= f.submit t('users.submit_new_user'), class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
           </div>
-
-
         <% end %>
-        <div>
-          <%= link_to "signup using ETH", "javascript:void(0);", class: 'eth_connect' %>,
-          <%= link_to "signup using Polka", "javascript:void(0);", class: 'polka_connect'  %>
-        </div>
+
+        <% if params[:wallet_type].blank?   %>
+          <div style="text-align: center;margin-left:auto;margin-top:24px;margin-left: auto; margin-right: auto; width: 300px;" class="search_row">
+            <div style="line-height: 36px;width:120px;height:36px;color: #111111;float:left;border: 1px solid #D1D5DB;filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.08));border-radius: 4px;">
+              <a href='#' class='eth_connect'>
+                <img src="/sessions/blue.png" width="16" />
+                MetaMask
+              </a>
+            </div>
+            <div style="border: 1px solid #D1D5DB;line-height: 36px;float:left;margin-left: 10px;filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.08));border-radius: 4px; width:120px;height:36px;color: #111111;">
+              <a href='#' class='polka_connect'>
+                <img src="/sessions/blue.png" width="16" />
+                Polka Dot
+              </a>
+            </div>
+          </div>
+        <% end %>
+
       </div>
     </div>
   </div>
