--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -51,16 +51,16 @@ end
         <% end %>
 
         <% if params[:wallet_type].blank?   %>
-          <div style="text-align: center;margin-left:auto;margin-top:24px;margin-left: auto; margin-right: auto; width: 300px;" class="search_row">
-            <div style="line-height: 36px;width:120px;height:36px;color: #111111;float:left;border: 1px solid #D1D5DB;filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.08));border-radius: 4px;">
-              <a href='#' class='eth_connect'>
-                <img src="/sessions/blue.png" width="16" />
+          <div class='button_wrapper' class="search_row">
+            <div class='dc_button'>
+              <a href='#' class='eth_connect' >
+                <%= image_pack_tag('metamask.png', style: 'width: 24px; height: 24px') %>
                 MetaMask
               </a>
             </div>
-            <div style="border: 1px solid #D1D5DB;line-height: 36px;float:left;margin-left: 10px;filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.08));border-radius: 4px; width:120px;height:36px;color: #111111;">
-              <a href='#' class='polka_connect'>
-                <img src="/sessions/blue.png" width="16" />
+            <div class='dc_button'>
+              <a href='#' class='polka_connect' >
+                <%= image_pack_tag('polka.png', style: 'width: 24px; height: 24px') %>
                 Polka Dot
               </a>
             </div>
@@ -72,6 +72,32 @@ end
   </div>
   <div class="col"></div>
 </div>
+<style>
+.button_wrapper{
+  text-align: center;
+  margin: 24px auto 0 auto;
+  width: 300px;
+}
+
+.dc_button{
+  border: 1px solid #D1D5DB;
+  float: left;
+  margin-left: 10px;
+  filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.08));
+  border-radius: 4px;
+  height:36px;
+  width: 120px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dc_button a {
+  color: #111111;
+}
+
+</style>
 
 <script>
 if (typeof window.ethereum !== 'undefined') {
