--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -1217,3 +1217,29 @@ textarea.div-dropzone-focus {
 #pending-user-list{
   padding-left: 0px;
 }
+
+.button_wrapper{
+  text-align: center;
+  margin: 24px auto 0 auto;
+  width: 300px;
+}
+
+.dc_button{
+  border: 1px solid #D1D5DB;
+  float: left;
+  margin-left: 10px;
+  filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.08));
+  border-radius: 4px;
+  height:36px;
+  width: 120px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dc_button a {
+  color: #111111;
+  font-size: 14px;
+}
+
