--- a/app/views/devise/registrations/_decentralized_sign_up_form.html.erb
+++ b/app/views/devise/registrations/_decentralized_sign_up_form.html.erb
@@ -15,6 +15,7 @@
 
 <%= form_group(f, :email) do %>
   <%= f.text_field :email, type: :email, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.email") %>
+  <div id="is_email_available"> </div>
 <% end %>
 
 <div class="form-group">
