--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,9 +49,14 @@ end
             <%= f.submit t('users.submit_new_user'), class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
           </div>
         <% end %>
+      </div>
+    </div>
 
-        <% if params[:wallet_type].blank?   %>
-          <div class='button_wrapper' class="search_row">
+    <div class="border-1 border-solid border-lightgray bg-white"
+      style="height:125px;font-family: PingFang SC;font-size: 14px; <% if params[:wallet_type].present? %> display: none<% end %>">
+      <div style="font-weight: 400;font-size: 18px;line-height: 25px;margin-left: 24px;padding-top: 16px;color: #000000;" >
+        去中心化注册
+          <div class='button_wrapper' class="search_row" >
             <div class='dc_button'>
               <a href='#' class='eth_connect' >
                 <%= image_pack_tag('metamask.png', style: 'width: 24px; height: 24px') %>
@@ -65,8 +70,6 @@ end
               </a>
             </div>
           </div>
-        <% end %>
-
       </div>
     </div>
   </div>
